--- a/agriculture/herbicide-calculator.html
+++ b/agriculture/herbicide-calculator.html
@@ -441,7 +441,18 @@ Clear all changes
  <p>
    Moreover, smallholder farmers tend to employ manual or knapsack sprayers that have low tank capacities and therefore, it is very important to make accurate calculations every time they are refilled. Imprecise conversions of herbicide will result in poor weed management or even legal matters concerning excessive use of the chemicals. To this end, we offer useful calculations that are applicable to both field and garden contexts, which are adjusted to the context of small-scale farming in such countries as Nigeria, where the organizations like the International Institute of Tropical Agriculture (IITA) encourage the use of safe and efficient farming tools.
  </p>
- 
+ <!------ Adsterra -------->
+ <script type="text/javascript">
+  atOptions = {
+    'key': 'f81dbf09c683afc118e38803230f52e9',
+    'format': 'iframe',
+    'height': 250,
+    'width': 300,
+    'params': {}
+  };
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/f81dbf09c683afc118e38803230f52e9/invoke.js"></script>
+ <!------ Adsterra --------->
  <p>
    This herbicide calculator is meant to encourage responsible use of chemicals, help the farmers to sustain their agriculture and to maximize their crop production, as well as, safeguard their crop and environment. This tool will enable farmers to use herbicides with a lot of confidence, efficiency, and safety by giving them clear and easy to understand results based on globally accepted units.
  </p>
