--- a/agriculture/herbicide-calculator.html
+++ b/agriculture/herbicide-calculator.html
@@ -429,7 +429,18 @@ Clear all changes
  <p>
    The application rates and calculations of herbicides may differ considerably depending on the farming methods and size of the land along with the local recommendations. This is the herbicide calculator, which adheres to common procedures common in farmland, particularly small scale farmers in areas such as Africa, South America, and some of Asia. The tool assists in converting dosage levels of a herbicide to smaller pieces of land making sure to apply it effectively and correctly even when dealing with small plots and hand-held sprayers.
  </p>
- 
+  <!------ Adsterra -------->
+ <script type="text/javascript">
+   atOptions = {
+     'key': 'f81dbf09c683afc118e38803230f52e9',
+     'format': 'iframe',
+     'height': 250,
+     'width': 300,
+     'params': {}
+   };
+ </script>
+ <script type="text/javascript" src="//www.highperformanceformat.com/f81dbf09c683afc118e38803230f52e9/invoke.js"></script>
+ <!------ Adsterra --------->
  <p>
    As an illustration, dosage of herbicides is usually in liters/hectare (L/Ha), which is convenient in massive farming but not realistic when working with smaller farms or gardens. This calculator will then translate those values into the useful units of milliliters of herbicide needed to spray a tank on your specific equipment and water consumption. This method minimizes waste, expenses and chances of excessive application that may be detrimental to crops and the environment.
  </p>
