--- a/agriculture/herbicide-calculator.html
+++ b/agriculture/herbicide-calculator.html
@@ -444,7 +444,20 @@ Clear all changes
  <p>
    As an illustration, dosage of herbicides is usually in liters/hectare (L/Ha), which is convenient in massive farming but not realistic when working with smaller farms or gardens. This calculator will then translate those values into the useful units of milliliters of herbicide needed to spray a tank on your specific equipment and water consumption. This method minimizes waste, expenses and chances of excessive application that may be detrimental to crops and the environment.
  </p>
- 
+  <!------ Adsterra -------->
+  <div class="adsterra-anchor">
+<script type="text/javascript">
+  atOptions = {
+    'key': '7bb9e23e1f2a3af8def78984ec27c5b7',
+    'format': 'iframe',
+    'height': 50,
+    'width': 320,
+    'params': {}
+  };
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/7bb9e23e1f2a3af8def78984ec27c5b7/invoke.js"></script>
+  </div>
+ <!------ Adsterra --------->
  <p>
    It is worth mentioning that the volume of the spray may also be affected by the type of sprayers used, the nozzle adjustment, and the density of the targeted weed. Mixed inconsistently or with the wrong dosage may result in a poor weed control or unintentional damage to good plants. This is made easier by our tool which asks for the most important inputs like water volume per 100 square meters and sprayer capacity. With these values, the calculator can give an accurate calculation of the amount of herbicide needed in the tank, resulting in effective and safe application of the herbicide in agreement with the best practices of agriculture.
  </p>
