--- a/agriculture/seed-rate-calculator.html
+++ b/agriculture/seed-rate-calculator.html
@@ -56,6 +56,20 @@
 </script>
 </head>
 
+<!------ Adsterra -------->
+<div class="adsterra-anchor-fixed">
+  <script type="text/javascript">
+    atOptions = {
+      'key': '7bb9e23e1f2a3af8def78984ec27c5b7',
+      'format': 'iframe',
+      'height': 50,
+      'width': 320,
+      'params': {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.highperformanceformat.com/7bb9e23e1f2a3af8def78984ec27c5b7/invoke.js"></script>
+</div>
+<!------ Adsterra --------->
 <body>
 
   <header>
@@ -463,7 +477,20 @@ Clear all changes
 </div>
 <div class="description-txt"><p>
 The <strong>Seed Rate Calculator</strong> is a useful experimental instrument used to allow the farmers agronomists and seed technologists to decide how much seed they should sow to a field to achieve a desired plant population. The calculator then works with the most significant agronomic variables - target plant population per square meter thousand gram weight of germination percentage field losses and crop area thousand hectares - and converts them into understandable measurements: sowing rate kilograms per hectare of seeds per square meter of seeds per hectare and tonnes of seed mass needed to cover your territory. It also works out effective germination and adjusted loss rates in such a way that you can observe the effect of seed quality and field conditions on the outcome.
-</p><p>
+</p>
+ <!------ Adsterra -------->
+ <script type="text/javascript">
+   atOptions = {
+     'key': 'f81dbf09c683afc118e38803230f52e9',
+     'format': 'iframe',
+     'height': 250,
+     'width': 300,
+     'params': {}
+   };
+ </script>
+ <script type="text/javascript" src="//www.highperformanceformat.com/f81dbf09c683afc118e38803230f52e9/invoke.js"></script>
+ <!------ Adsterra --------->
+<p>
 Why this is important: a small miscalculation in seed rate will result in a either a loss of money through excess seeding or a loss of revenue through underseeding. The calculator provides you with an evidence based seeding plan which you can trust with a combination of simple algebra and field tested corrections. The tool takes into consideration the size of the seed
  by weight of a thousand grains and the real world factors such as reduced germination and field losses to ensure your sowing recommendations are the same as what actually comes out of the field.
 </p><p>
@@ -474,19 +501,58 @@ Calculate the number of tonnes to buy at an approximation of the nearest tonne t
   <li><a href="#how_to_use_calculator">How to use our seed rate calculator</a></li>
   <li><a href="#difference_between_topics">Difference between seed rate and planting density</a></li>
   <li><a href="#faq">FAQs</a></li>
-</ul><h2 id="what_is_seed_rate">What is a seed rate</h2><p>
+</ul><h2 id="what_is_seed_rate">What is a seed rate</h2>
+ <!------ Adsterra -------->
+ <script type="text/javascript">
+   atOptions = {
+     'key': 'f81dbf09c683afc118e38803230f52e9',
+     'format': 'iframe',
+     'height': 250,
+     'width': 300,
+     'params': {}
+   };
+ </script>
+ <script type="text/javascript" src="//www.highperformanceformat.com/f81dbf09c683afc118e38803230f52e9/invoke.js"></script>
+ <!------ Adsterra --------->
+<p>
  This is the quantity of seed sown on a hectare of land that is measured in kilograms per hectare seeds on hectare or in some cases the number of seeds per linear meter of row. Fundamentally seed rate is a number of planning. It is the number of seeds to place in the soil that will result in the required plant population after the germination emergence and early survival are factors are considered.
 </p><p>
 Seed rate can be associated with three related layers that can be considered. The initial one is biological: the seeds vary in size and shape and their potential to germinate and develop. The mass of one thousand grains that are converted to grams is known as the average mass of one thousand grains and this is a direct measure of seed size. Thousand grain weight is less, and therefore there are fewer seeds per kilogram hence kg/hectare answers, and the seeds per hectare must react on this. The second level is environmental: soil moisture seedbed quality disease pests and mechanical damage decrease the percentage of the seeds germinating into plants. We commonly measure these effects using two inputs: germination percentage in the lab based on a laboratory germination experiment and field loss percentage which is an estimate of the loss after seeding. The third level is management: planting depth, sowing method row spacing and seed treatments influence the number of seeds that are converted into plants. An example is that when drilling penetrates with a firm seedbed at the right depth this makes the establishment more than when the shallow broadcasts the sewerange loosely.
 </p><p>
 Units matter. There are many standard units that are used by farmers and advisors depending on the task. The usefulness of the seeds per square meter and seeds per hectare is in agronomy and planning between field sizes. Kilograms per hectare are helpful in purchasing seed and setup seed drills. The common unit used to calibrate the planters and seed drills is the number of seeds per linear meter of row. An effective calculator will have all these units connected together so that when one input is changed all the outputs will be changed.
-</p><p>
+</p>
+ <!------ Adsterra -------->
+ <script type="text/javascript">
+   atOptions = {
+     'key': 'f81dbf09c683afc118e38803230f52e9',
+     'format': 'iframe',
+     'height': 250,
+     'width': 300,
+     'params': {}
+   };
+ </script>
+ <script type="text/javascript" src="//www.highperformanceformat.com/f81dbf09c683afc118e38803230f52e9/invoke.js"></script>
+ <!------ Adsterra --------->
+<p>
 Practically farmers do not select a seed rate initially and singly. Their target population of plants is determined by variety recommendation soil type and preferred stand. Then they determine the seed rate which will reach that target based on the weight of the seeds and their anticipated losses on establishment. The seed rate then is a working figure derived through biological target. This is the reason why contemporary calculators are requesting you to enter target plants per square meter instead of just requesting you to type in a figure of kg per hectare.
 </p><p>
 Lastly is seed rate which is crop specific and region specific. The practice that is effective with small seeded grain crops such as wheat is not the same with row crops such as maize soybean or sunflower. The calculator must thus be able to be flexible in its inputs to capture the crop specific thousand-gram weight recommended target populations and local expectations regarding germination and losses. When you enter the calculator you are converting a biological target to an operating plan which you can purchase seed, put into your planter and watch when it begins to grow.
 </p><h2 id="how_to_calculate_manually">How to calculate seed rate manually</h2><p>
 It is easy to work out the seed rate manually, when you arithmetically compute it in the only sequence. The formulas are given in full derivation below and an example worked out in detail with step by step arithmetic operation to ensure you can check all the steps.
-</p><p>
+</p>
+ <!------ Adsterra -------->
+ <script type="text/javascript">
+   atOptions = {
+     'key': 'f81dbf09c683afc118e38803230f52e9',
+     'format': 'iframe',
+     'height': 250,
+     'width': 300,
+     'params': {}
+   };
+ </script>
+ <script type="text/javascript" src="//www.highperformanceformat.com/f81dbf09c683afc118e38803230f52e9/invoke.js"></script>
+ <!------ Adsterra --------->
+<p>
 <strong>Step 1 Define the inputs</strong>
 </p><ul>
   <li>Target population T in plants per square meter (plants/m2)</li>
@@ -532,7 +598,20 @@ At this point, we will present a more detailed numerical example and will calcul
 <strong>Worked example</strong>
 </p><p>
 Suppose T = 250 plants/m 2 TGW = 40Gm germination G = 90 percent and elective field losses L = 10 percent. We shall work out number of seeds per square meter seeds per hectare kg per hectare and overall seed of a 50 hectare field.
-</p><p>
+</p>
+ <!------ Adsterra -------->
+ <script type="text/javascript">
+   atOptions = {
+     'key': 'f81dbf09c683afc118e38803230f52e9',
+     'format': 'iframe',
+     'height': 250,
+     'width': 300,
+     'params': {}
+   };
+ </script>
+ <script type="text/javascript" src="//www.highperformanceformat.com/f81dbf09c683afc118e38803230f52e9/invoke.js"></script>
+ <!------ Adsterra --------->
+<p>
 Convert percents to fractions step by step:
 </p><p>
 G divided by 100 = 90 / 100 = 0.90.
@@ -627,7 +706,20 @@ Enter germination of a recent test, under normal conditions or use lot germinati
 Field losses consider anything to diminish emergence subsequent to you planting the seed: birds rodents disease insects crust drought mechanical damages and improper planting depth. Insert the percentage lost since sowing; 0 indicates no losses and 20 indicates that one out of every five sown seeds that failed to germinate. Use a small conservative buffer when it is uncertain whether there will be some pressure or not, or when it is uncertain whether there may be some pests around.
 </p><p>
 <strong>Crop area in hectares</strong>
-</p><p>
+</p>
+ <!------ Adsterra -------->
+ <script type="text/javascript">
+   atOptions = {
+     'key': 'f81dbf09c683afc118e38803230f52e9',
+     'format': 'iframe',
+     'height': 250,
+     'width': 300,
+     'params': {}
+   };
+ </script>
+ <script type="text/javascript" src="//www.highperformanceformat.com/f81dbf09c683afc118e38803230f52e9/invoke.js"></script>
+ <!------ Adsterra --------->
+<p>
 Divide the area to be sown by hectares to determine the total tonnage of the seed. It divides kg per hectare with crop area and then changes to tonnes in case you need it to get purchase amounts to the nearest 0.01 tonne should you wish.
 </p><p>
 <strong>What the calculator returns</strong>
@@ -699,7 +791,20 @@ Germination tests are standardized and tend to work reasonably well provided the
 <strong>How should I estimate field losses?</strong>
 </p><p>
 The most difficult input to define is field losses that are influenced by local pest pressure soil moisture emergence problems and mechanical problems. As a point of reference, use the historical local experience of the crop and sowing window. When dealing with a high risk environment include a buffer. In a low risk irrigated seedbed you might have 5 to 10 percent and in a hot dry broadcast sowing you might have 20 percent or more. The calculator also allows you to experiment with conditions to try low medium and high loss assumptions to find out how sensitive your kg per hectare recommendation is.
-</p><p>
+</p>
+ <!------ Adsterra -------->
+ <script type="text/javascript">
+   atOptions = {
+     'key': 'f81dbf09c683afc118e38803230f52e9',
+     'format': 'iframe',
+     'height': 250,
+     'width': 300,
+     'params': {}
+   };
+ </script>
+ <script type="text/javascript" src="//www.highperformanceformat.com/f81dbf09c683afc118e38803230f52e9/invoke.js"></script>
+ <!------ Adsterra --------->
+<p>
 <strong>Can I compensate for low germination by increasing seed rate?</strong>
 </p><p>
 Yes higher seed rate overcomes low germination but again there is a limit. The cost doubles with doubling the seed rate and may lead to competition should a significant portion of the seed actually take hold. Poor germination can be a symptom of either bad seed health or bad storage conditions and purchasing a better seed or fixing storage conditions is usually cheaper. Enter the values into the calculator to find out the cost that is necessary to achieve your target population of plant with a low germination lot and compare that to the cost of changing the seed lot.
@@ -719,6 +824,20 @@ Yes seed moisture affects weight. TGW should be measured at standard moisture co
 
   </section>
   
+      <!------ Adsterra -------->
+    <div class="adsterra-anchor">
+      <script type="text/javascript">
+        atOptions = {
+          'key': '7bb9e23e1f2a3af8def78984ec27c5b7',
+          'format': 'iframe',
+          'height': 50,
+          'width': 320,
+          'params': {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/7bb9e23e1f2a3af8def78984ec27c5b7/invoke.js"></script>
+    </div>
+    <!------ Adsterra --------->
 <footer>
     <h3>Calculator Categories</h3>
     <div class="calculator-categories-footer">
