--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   
   <title>Calclulo - Free All in one online calculator</title>   <!-- Google Tag Manager --> <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script> <!-- End Google Tag Manager -->
   
+  <!------- Ezoic ads --------->
+  <script src="https://cmp.gatekeeperconsent.com/min.js" data-cfasync="false"></script>
+<script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script>
+<!------- Ezoic ads --------->
+
+  <!------- Ezoic ads --------->
+<script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
+<script>
+  window.ezstandalone = window.ezstandalone || {};
+  ezstandalone.cmd = ezstandalone.cmd || [];
+</script>
+  <!------- Ezoic ads --------->
+  
   <link rel="manifest" href="/assets/manifest.json">
   <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
@@ -358,7 +371,15 @@ CGPA calculation made easy and straightforward for Nigerian students, helping th
     </div>
    
   </section>
-
+  <!------- Ezoic ads --------->
+  <div id="ezoic-pub-ad-placeholder-101"></div>
+<script>
+  ezstandalone.cmd.push(function() {
+    ezstandalone.showAds(101);
+  });
+</script>
+  <!------- Ezoic ads --------->
+  
 <section class="about-section">
   <div class="about-illustration">
     <img src="/assets/images/Messy.svg" alt="Messy">
