--- a/construction/square-footage-calculator.html
+++ b/construction/square-footage-calculator.html
@@ -190,7 +190,7 @@ Everyday Life
 </h1>
 
   <p class="calculator-info-p">
-    The Square Footage Calculator allows you to compute the construction area, flooring or landscape area. Calculate feet to meters, yards to inches and estimate cost of materials.
+    The Square Footage Calculator allows you to calculate the construction area, flooring or landscape area. Calculate feet to meters, yards to inches and estimate cost of materials.
   </p>
 </div>
 
@@ -541,8 +541,9 @@ Clear all changes
     <div class="similar-calculators-wrap">
       <h2>Similar Calculators</h2>
       <div class="similar-calculators">
-        <a href="/other/upload-time-calculator">Upload Time Calculator</a>
-        <a href="/other/website-bandwidth-calculator">Website Bandwidth Calculator</a>
+        <a href="/conversion/hours-to-week-conversion">Hours to Week Conversion</a>
+        <a href="/ecology/bag-footprint-calculator">Bag Footprint Calculator</a>
+        <a href="/conversion/minutes-to-hours-converter">Minutes to Hours Converter</a>
       </div>
     </div>
 <div class="description-txt">
