--- a/conversion/hours-to-week-conversion.html
+++ b/conversion/hours-to-week-conversion.html
@@ -386,22 +386,18 @@ Clear all changes
       </div>
     </div>
     <div class="description-txt">
+  
+  <p>
+    The <strong>Hours to Week Converter</strong> is a simple but powerful tool that converts between <strong>hours</strong> and <strong>weeks</strong> instantly and accurately. At its core the calculator uses the unambiguous relationship that one week equals <strong>168 hours</strong> (7 days × 24 hours). You can type a value in <strong>hours</strong> and the calculator will produce the equivalent number of <strong>weeks</strong>, or type a value in <strong>weeks</strong> and it will show the matching number of <strong>hours</strong>.
+  </p>
   <h2>Table of contents</h2>
-  <ul>
-    <li><a href="#how-to-convert-hours-to-weeks-manually">How to convert hours to weeks manually</a></li>
-    <li><a href="#weeks-to-hours-conversion-manually">Weeks to hours conversion manually</a></li>
-    <li><a href="#how-to-use-the-hours-to-week-converter">How to use the Hours to Week Converter</a></li>
-    <li><a href="#faq">FAQs</a></li>
-  </ul>  <h2>Description of what the calculator does</h2>
-  <p>
-    The <strong>Hours to Week Converter</strong> is a simple but powerful tool that converts between <strong>hours</strong> and <strong>weeks</strong> instantly and accurately. At its core the calculator uses the unambiguous relationship that one week equals <strong>168 hours</strong> (7 days × 24 hours). You can type a value in <strong>hours</strong> and the calculator will produce the equivalent number of <strong>weeks</strong>, or type a value in <strong>weeks</strong> and it will show the matching number of <strong>hours</strong>. The converter handles whole numbers and fractional values, and it will also accept numbers that include commas (for readability) by cleaning them out before calculating.
-  </p>
-  <p>
-    Beyond the basic two-way conversion, the tool gives a breakdown when useful — for example showing how many whole hours, minutes and seconds are represented by a fractional week or how many days and leftover hours correspond to a particular hours value. This makes the calculator more than a raw number converter: it’s a practical helper for scheduling, time-tracking, payroll computations, server-uptime reporting, and project planning. The UI is designed so that the conversion is automatic (no submit button needed) and programmatically-updated fields are clearly marked with a <strong>result</strong> class so you can style or export them consistently.
-  </p>
-  <p>
-    Because time calculations often appear in messy formats, the converter is built to be forgiving: it strips punctuation like commas and supports decimals, negative values (for representing deficits or time owed), and large numbers. It also explains rounding choices and offers clear notes about when a “week” means a calendar week (7×24 hours) versus a common business interpretation (a five-day workweek). In short, this converter gives fast, precise conversions anchored on the fundamental 168-hour definition, presented in a user-friendly way that helps you interpret and use the result reliably.
-  </p>  <h2 id="how-to-convert-hours-to-weeks-manually">How to convert hours to weeks manually</h2>
+<ul>
+  <li><a href="#how-to-convert-hours-to-weeks-manually">How to convert hours to weeks manually</a></li>
+  <li><a href="#weeks-to-hours-conversion-manually">Weeks to hours conversion manually</a></li>
+  <li><a href="#how-to-use-the-hours-to-week-converter">How to use the Hours to Week Converter</a></li>
+  <li><a href="#faq">FAQs</a></li>
+</ul>
+  <h2 id="how-to-convert-hours-to-weeks-manually">How to convert hours to weeks manually</h2>
   <p>
     Converting hours to weeks manually is straightforward once you understand the fundamental relationship: one calendar week equals 7 days and each day equals 24 hours, so one week always equals <strong>168 hours</strong>. That constant — 168 — is the only conversion factor you need. The manual conversion process is simply a division operation: take the total number of hours and divide by 168. That will yield the number of weeks expressed as a decimal. But beyond this simple step, real-world use often demands more: converting fractional weeks to days and hours, keeping track of minutes and seconds, working with commas and large numbers, and making sensible rounding choices. This section explains each of those steps and gives worked examples so you can do the math confidently without a tool.
   </p>  <p>
