--- a/education/75-attendance-calculator.html
+++ b/education/75-attendance-calculator.html
@@ -15,35 +15,31 @@
 <link rel="stylesheet" href="/assets/css/cookie.css" />
 <link rel="stylesheet" href="/assets/css/share-global.css" />
 
-
-<meta name="title" content="75 Attendance Calculator | Calculate Click Through Rate Fast & Free">
 <meta name="description" content="75 attendance calculator. Find out the number of days you can bunk while still maintaining 75% attendance.">
-
-<meta name="calclulo" content="Calclulo - 75 Attendance Calculator">
+<meta name="keywords" content="75 attendance calculator, attendance percentage, classes to miss, days present, Calclulo">
+<meta name="author" content="Calclulo">
 <meta name="robots" content="index, follow">
+
 <link rel="canonical" href="https://calclulo.com/education/75-attendance-calculator">
 
-<meta name="title" content="75 Attendance Calculator | Calculate Attendance Percentage Fast & Free">
-<meta name="description" content="Free 75 Attendance Calculator to quickly determine your attendance percentage. Enter days present and total classes to get instant results. Perfect for students tracking compulsory attendance." />
-<meta name="calclulo" content="Calclulo - 75 Attendance Calculator">
-<meta name="robots" content="index, follow">
-<link rel="canonical" href="https://calclulo.com/education/75-attendance-calculator">
-
+<meta property="og:locale" content="en_US">
+<meta property="og:site_name" content="Calclulo">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/education/75-attendance-calculator">
 <meta property="og:title" content="75 Attendance Calculator | Calculate Attendance Percentage Fast & Free">
-<meta property="og:description" content="Use Calclulo's free 75 Attendance Calculator to calculate how many days you must attend to reach 75% or how many days you can miss while maintaining required attendance." />
+<meta property="og:description" content="Use Calclulo's free 75 Attendance Calculator to calculate how many days you must attend to reach 75% or how many days you can miss while maintaining required attendance.">
 <meta property="og:image" content="https://calclulo.com/assets/images/75-attendance-calculator-thumbnail.png">
+<meta property="og:image:alt" content="75 Attendance Calculator">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://calclulo.com/education/75-attendance-calculator">
 <meta name="twitter:title" content="75 Attendance Calculator | Calculate Attendance Percentage Fast & Free">
-<meta name="twitter:description" content="Instantly calculate your attendance percentage. Enter days present and total classes to see whether you meet the 75 percent requirement or how many classes you can miss." />
+<meta name="twitter:description" content="Instantly calculate your attendance percentage. Enter days present and total classes to see whether you meet the 75 percent requirement or how many classes you can miss.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/75-attendance-calculator-thumbnail.png">
 
-<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
-<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
-<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
+<link href="https://calclulo.com/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="https://calclulo.com/favicons/favicon-128.png" rel="icon" sizes="128x128">
+<link href="https://calclulo.com/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
@@ -57,7 +53,8 @@
       "@type": "Organization",
       "name": "Calclulo",
       "url": "https://calclulo.com"
-    }
+    },
+    "image": "https://calclulo.com/assets/images/75-attendance-calculator-thumbnail.png"
   }
 </script>
 </head>
