--- a/agriculture.html
+++ b/agriculture.html
@@ -197,7 +197,7 @@ Everyday Life
 </h1>
 <p data-name-category="agriculture" class="description-header-info-calculator-numb"></p>
   <p class="category-info-p">
-    Streamline your farming calculations and make smarter, more efficient choices. This is ideal for farmers and students.
+    We aim to assist farmers, agronomists and even students to make better decisions concerning farming. Be it computation of residues, fertilizers, and even the quantity of water required, we will be giving the right data and save the time of the user. The calculators can be done anywhere, to the spheres of cultivation planning, resource and feed distribution management, through the contemporary sustainable agriculture with their reliable, and timely data.
   </p>
 </div>
 
