--- a/conversion.html
+++ b/conversion.html
@@ -195,7 +195,7 @@ Everyday Life
 </h1>
 <p data-name-category="conversion" class="description-header-info-calculator-numb"></p>
   <p class="category-info-p">
-    Easily convert units like length, weight, temperature, and time. From everyday tools to fun ones like the T rex bite converter, all work on desktop and mobile.
+    Length, weight, temperature, time, speed, and a thousand other quantities; you cannot conceive of a single day when you will not have to handle length or weight or as much time as is speed or time, it has its units. To further complicate the matter, various systems such as the SI units or U.S. customary units may reduce any simple math problem to a splitting head. The confusion in changing between units is removed by our unit conversion calculators, according to which you can get conversions quickly, reliably and accurately just by a few clicks. Whether it is a study process, work or you are just curious, these tools make you flow easily between the systems, and you do not need to memorize formulas and tables. They are constructed in the classroom as well as in life in general, to ensure that there is ease in changing units, quick, and without any aimed strains.
   </p>
 </div>
 
