--- a/everyday-life.html
+++ b/everyday-life.html
@@ -197,7 +197,9 @@ Everyday Life
 <p data-name-category="everyday life" class="description-header-info-calculator-numb"></p>
 
   <p class="category-info-p">
-   Take the hassle out of everyday calculations. Simple, quick, and made to help with the little decisions life throws your way.
+   There are simple questions it is possible to handle using numbers in everyday life: It is not as hard as arranging a personal time schedule; which includes how to fit as many activities in a day as possible. The rather day to day life calculators are present to make those instances easier. They transform day to day problems into responses that are straightforward and easygoing in a way that you do not waste your time idling and worrying. Such calculators assist you in providing solutions to some of the basic, everyday taxing problematic situations that life presents to you whether you are trying to handle time and tasks, quick verdicts or merely mind exercises. People do not need to take so much energy to think. Get the calculators to do the hard work and assist you to work smart.
+
+
   </p>
 </div>
 
