--- a/finance.html
+++ b/finance.html
@@ -197,7 +197,7 @@ Everyday Life
 <p data-name-category="finance" class="description-header-info-calculator-numb"></p>
 
   <p class="category-info-p">
-  Finance calculators help you manage money better by quickly calculating loans, investments, savings, and budgets with accurate results.
+  Money is involved in almost all aspects of life, such as shopping, saving, and investments and management of a business. However, it can also be overwhelming to track it all, and when numbers and decisions begin to mount the process can become overwhelming. Our finance calculators come in at that point. They make complicated tasks seem simple as it provides you with straightforward answers to questions related to budgeting, savings, loans, investments, and others. These tools will allow you to be in control of your finances, be it when struggling with personal expenses, planning or operating a business.
   </p>
 </div>
 
