--- a/food.html
+++ b/food.html
@@ -197,7 +197,11 @@ Everyday Life
 <p data-name-category="food" class="description-header-info-calculator-numb"></p>
 
   <p class="category-info-p">
-    Simple food calculators to help you measure ingredients, plan meals, and track nutrition with ease.
+    One of the most significant - and the most pleasant - aspects of life is food. It is not just a matter of survival, but also of tradition, celebration and even identity. It brings happiness, sometimes it makes us feel guilty and other times it makes us confused whether we have taken a slice of pizza too many. That combination of feelings demonstrates precisely why food is so interesting a topic, and why it is so frequently accompanied by the figures which are worth counting.
+
+Everyone was given this set of food calculators, the home cooks, who want to get it right with their recipes, the health conscious who look at the totals of calories in their meals, the party planners who do not want to see a single guest leave without a bite, and even the coffee lovers who are seeking the perfect start to their day. They come to reduce the obscured computation of food so you may just relish it.
+
+Planning a dinner? You will know precisely how much you need to cook to avoid wastages. Counting calories? Our devices simplify the process of monitoring nutrition. Hosting a holiday feast? You are able to approximate the quantity of food to purchase and the amount of exercise you would have to do after it. Wondering about your day to day coffee addiction? Get the figures behind your favorite brew and know just how much energy it actually gives you.
   </p>
 </div>
 
