--- a/physics.html
+++ b/physics.html
@@ -197,7 +197,11 @@ Everyday Life
 <p data-name-category="physics" class="description-header-info-calculator-numb"></p>
 
   <p class="category-info-p">
-    Powerful physics calculators to solve motion, force, energy, and other key concepts. Whether you're a student, teacher, or enthusiast, these tools make tackling physics problems faster and easier.
+    Through an effort to explain everything in nature, the process of motion of small particles, as well as behaviour of galaxies is usually referred to as physics as the most fundamental science. However, as so many formulae, principles, laws, exist, at times it may seem impossible to remember about them all. Our physics calculators come in there.
+
+This is a collection which is constructed to make the various hodgepodge of physics simpler, and complex equations become straightforward, useful applications. Be it time and again, you may be attempting to learn more about classical mechanics, thermodynamics, electromagnetism or simply more into the realms of the astrophysics and quantum theory- these tools help you keep your feet on the ground when working with numbers that characterize our world.
+
+To students, to teachers, to experts in research, or to the layperson whose interest wised-up, physics calculators offer a means of going behind the scenes in a computer world and discovering how the laws of nature work at both background and high levels of degrees.
   </p>
 </div>
 
