--- a/statistics.html
+++ b/statistics.html
@@ -197,7 +197,7 @@ Everyday Life
 <p data-name-category="statistics" class="description-header-info-calculator-numb"></p>
 
   <p class="category-info-p">
-    Smart statistics calculators for analyzing data, finding averages, probabilities, and more. Ideal for students, researchers, and anyone working with numbers.
+    winning the lottery? Or how dangerous to make such a bet? Never mind, perhaps you only want to know how many times you would have to toss a dice, before your roll comes out your winning number. These are all statistics problems all the way down to it stuff, and we have simple calculators so that you do not have to struggle with them. Our odds calculators to probability tools will assist in being smarter and see problems through at a faster rate. On the trip you can even learn time wasting tricks to impress your friends to get the best tricks to show them how their guarantees of victory are almost impossible (and you alone know how much math goes behind such a trick 😉).
   </p>
 </div>
 
