--- a/construction.html
+++ b/construction.html
@@ -194,7 +194,7 @@ Everyday Life
 </h1>
 <p data-name-category="construction" class="description-header-info-calculator-numb"></p>
   <p class="category-info-p">
-    Get your construction calculations done swiftly and accurately to guarantee precise measurements, cost estimates, and effective project planning.
+    It could be that you are making some renovations in your house as well as running out some arrangements in regard to a swimming pool or snow removing on your roof we have got it covered. These online construction calculators have been targeted at carpenters, painters, bricklayers, roofers, and even the craftsmen that alternate between driveways in square feet to pounds of cement on a daily basis. Every one of our tools is designed to save you a valuable amount of time and money such be it roofing calculator and stairs calculator to the construction materials calculator. You will never spend on the building materials with us!
   </p>
 </div>
 
