--- a/chemistry.html
+++ b/chemistry.html
@@ -193,11 +193,18 @@ Everyday Life
 </button>
 </h1>
 <p data-name-category="chemistry" class="description-header-info-calculator-numb"></p>
-  <p class="category-info-p">
+  <p class="category-info-p clamped" id="categoryText">
     To many beginners the study of chemistry may include numerous odd equations, rules contrary to the laws of logic and various strange symbols to many. But with deeper investigation, you will realize it is one of the most interesting and beneficial fields of science. Our chemistry calculators have been crafted to relieve learners and professionals of the stress associated with chemical math and swiftly clarify their chemical reactions, formulas, and laboratory problems. You will in fact concentrate on the concept and appreciate the many things chemistry has provided; even the air we breathe and the reactions that bring life to the world.
 
-
   </p>
+  <button class="read-more-btn" id="toggleBtn"
+          aria-expanded="false" aria-controls="categoryText">
+    <span id="btnText">Read more</span>
+
+    <svg class="chev" viewBox="0 0 10 6" aria-hidden="true" focusable="false">
+      <path d="M1 1l4 4 4-4" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </button>
 </div>
 
 <div class="calculators-lists">
