--- a/health.html
+++ b/health.html
@@ -196,11 +196,19 @@ Everyday Life
 
 <p data-name-category="health" class="description-header-info-calculator-numb"></p>
 
-  <p class="category-info-p">
+  <p class="category-info-p clamped" id="categoryText">
     Health is among the most significant in our lives but sometimes it seems like there are complex figures, formulas, and medical terminologies are involved. Our health calculators come in where. They are meant to simplify medical concepts in terms of medical doctors checking out formulas, also in terms of medical students learning the basics as well as the general person who just wonders what is happening to their own body.
 
 Whether you have ever wondered roughly how much of your body blood is, or how to modify medication to suit children? How to attempt to perceive the meaning behind various health scores and risk factors? Being able to convert technical measurements into straightforward, visually suitable and easy-to-understand, personal outcomes, these calculators make technical aspects less complex. The same features the tracking of fitness and nutrition and even a discovery of medical risk screening that help overcome the need to be informed.
   </p>
+  <button class="read-more-btn" id="toggleBtn"
+          aria-expanded="false" aria-controls="categoryText">
+    <span id="btnText">Read more</span>
+
+    <svg class="chev" viewBox="0 0 10 6" aria-hidden="true" focusable="false">
+      <path d="M1 1l4 4 4-4" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </button>
 </div>
 
 <div class="calculators-lists">
