--- a/other.html
+++ b/other.html
@@ -195,11 +195,19 @@ Everyday Life
 
 <p data-name-category="other" class="description-header-info-calculator-numb"></p>
 
-  <p class="category-info-p">
+  <p class="category-info-p clamped">
     All calculators are not of an obvious kind - and that is where this collection intends to enter. These are the instruments that do not really fit in the category of finance, science, education, health, yet, are too helpful (or so entertaining) to be omitted. Imagine it is the miscellaneous puller of Calclulo: a collection of special, useful, and even eccentric calculators which need a home like any other.
 
 This is where you will find the bad scrouts the outliers, the calculators of the novel questions and the peculiar problems, just do not belong to any other theme. Some can be used in everyday life, some can be more curiosity based, however, all of them are made with an aim to result in easier numbers, regardless of the unexpectedness of the situation.
   </p>
+  <button class="read-more-btn" id="toggleBtn"
+          aria-expanded="false" aria-controls="categoryText">
+    <span id="btnText">Read more</span>
+
+    <svg class="chev" viewBox="0 0 10 6" aria-hidden="true" focusable="false">
+      <path d="M1 1l4 4 4-4" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </button>
 </div>
 
 <div class="calculators-lists">
