--- a/agriculture.html
+++ b/agriculture.html
@@ -196,9 +196,17 @@ Everyday Life
 </button>
 </h1>
 <p data-name-category="agriculture" class="description-header-info-calculator-numb"></p>
-  <p class="category-info-p">
+  <p class="category-info-p clamped" id="categoryText">
     We aim to assist farmers, agronomists and even students to make better decisions concerning farming. Be it computation of residues, fertilizers, and even the quantity of water required, we will be giving the right data and save the time of the user. The calculators can be done anywhere, to the spheres of cultivation planning, resource and feed distribution management, through the contemporary sustainable agriculture with their reliable, and timely data.
   </p>
+  <button class="read-more-btn" id="toggleBtn"
+          aria-expanded="false" aria-controls="categoryText">
+    <span id="btnText">Read more</span>
+
+    <svg class="chev" viewBox="0 0 10 6" aria-hidden="true" focusable="false">
+      <path d="M1 1l4 4 4-4" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </button>
 </div>
 
 <div class="calculators-lists">
