--- a/conversion.html
+++ b/conversion.html
@@ -194,9 +194,17 @@ Everyday Life
 </button>
 </h1>
 <p data-name-category="conversion" class="description-header-info-calculator-numb"></p>
-  <p class="category-info-p">
+  <p class="category-info-p clamped" id="categoryText">
     Length, weight, temperature, time, speed, and a thousand other quantities; you cannot conceive of a single day when you will not have to handle length or weight or as much time as is speed or time, it has its units. To further complicate the matter, various systems such as the SI units or U.S. customary units may reduce any simple math problem to a splitting head. The confusion in changing between units is removed by our unit conversion calculators, according to which you can get conversions quickly, reliably and accurately just by a few clicks. Whether it is a study process, work or you are just curious, these tools make you flow easily between the systems, and you do not need to memorize formulas and tables. They are constructed in the classroom as well as in life in general, to ensure that there is ease in changing units, quick, and without any aimed strains.
   </p>
+  <button class="read-more-btn" id="toggleBtn"
+          aria-expanded="false" aria-controls="categoryText">
+    <span id="btnText">Read more</span>
+
+    <svg class="chev" viewBox="0 0 10 6" aria-hidden="true" focusable="false">
+      <path d="M1 1l4 4 4-4" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </button>
 </div>
 
 <div class="calculators-lists">
@@ -204,6 +212,7 @@ Everyday Life
   <a href="/conversion/roman-numeral-converter">Roman Numeral Converter</a>
   <a href="/conversion/roman-numeral-date-converter">Roman Numeral Date Converter</a>
   <h2>Time converters 🕰️</h2>
+  <a href="/conversion/hours-to-week-conversion">Hours to Week Conversion</a>
 <a href="/conversion/minutes-to-hours-converter">Minutes to Hours Converter</a>
 </div>
   </section>
