--- a/math.html
+++ b/math.html
@@ -196,9 +196,17 @@ Everyday Life
 
 <p data-name-category="math" class="description-header-info-calculator-numb"></p>
 
-  <p class="category-info-p">
+  <p class="category-info-p clamped" id="categoryText">
     Math is not as boring and difficult as that! Our numbers of calculators in maths allow all users to make and learn useful mathematical calculations within some seconds. so you are afraid of trigonometry? Do you believe that geometry is too complicated? Fear not! Calclulo is here, and it has a wide range of calculators created in such a way that it takes anyone of any level of math knowledge to deal with complex mathematical problems easily. In our algebra calculators, with our percentie tons and things cali-culatory and our orange calculators, we have it all. You need a fraction calculator to simplify ratios, you need a square root calculator to check your homework... You name it, we have it! Alongside the high quality mathematical calculators, we have specific and clear descriptions of mathematical things in plain and simple language to shed some light on the complicated problems you so never appeared to get.
   </p>
+  <button class="read-more-btn" id="toggleBtn"
+          aria-expanded="false" aria-controls="categoryText">
+    <span id="btnText">Read more</span>
+
+    <svg class="chev" viewBox="0 0 10 6" aria-hidden="true" focusable="false">
+      <path d="M1 1l4 4 4-4" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </button>
 </div>
 
 <div class="calculators-lists">
