--- a/ecology.html
+++ b/ecology.html
@@ -210,6 +210,7 @@ Everyday Life
 <div class="calculators-lists">
   <h2>Carbon Footprint Calculator ♻️</h2>
  <a href="/ecology/bag-footprint-calculator">Bag Footprint Calculator</a>
+ <a href="/ecology/vegan-footprint-calculator">Vegan Footprint Calculator</a>
 </div>
   </section>
 
