--- a/ecology/vegan-footprint-calculator.html
+++ b/ecology/vegan-footprint-calculator.html
@@ -529,9 +529,9 @@ Clear all changes
     <div class="similar-calculators-wrap">
       <h2>Similar Calculators</h2>
       <div class="similar-calculators">
-        <a href="/everyday-life/age-calculator">Age Calculator</a>
-        <a href="/everyday-life/time-calculator">Time Calculator</a>
-        <a href="/math/mean-calculator">Mean Calculator</a>
+        <a href="/ecology/bag-footprint-calculator">Vegan Footprint Calculator</a>
+        <a href="/agriculture/herbicide-calculator">Herbicide Calculator</a>
+        <a href="/agriculture/seed-rate-calculator">Seed Rate Calculator</a>
       </div>
     </div>
 <div class="description-txt">
